--- a/css/styles.css
+++ b/css/styles.css
@@ -431,6 +431,8 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   position: relative;
+
+  padding: 72px 24px 24px;
   width: 100%;
   height: 100%;
   max-width: 408px;
@@ -447,6 +449,10 @@ img {
 }
 
 .modal-close {
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   position: absolute;
   top: 24px;
   right: 24px;
@@ -460,7 +466,8 @@ img {
   background-color: var(--border-filter-color);
 }
 
-.modal-close:active {
+.modal-close:hover,
+.modal-close:focus {
   background-color: var(--active-color);
   fill: var(--white-color);
 }
@@ -483,7 +490,7 @@ img {
   text-align: center;
 
   color: var(--title-color);
-  padding-top: 72px;
+
   margin-bottom: 16px;
 
   font-weight: 500;
@@ -493,14 +500,10 @@ img {
 /* form-modal-hero */
 
 .form-field {
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-  padding-left: 24px;
-  max-width: 360px;
   display: flex;
   flex-direction: column;
+
+  margin-bottom: 8px;
 }
 
 .form-field label {
@@ -513,7 +516,11 @@ img {
 }
 
 .form-field input {
-  width: 360px;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  width: 100%;
   height: 40px;
 
   padding: 0 0 0 38px;
@@ -523,7 +530,13 @@ img {
 }
 
 .form-field textarea {
-  width: 360px;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  display: block;
+
+  width: 100%;
   height: 120px;
   padding: 8px 0 0 16px;
 }
@@ -547,11 +560,13 @@ img {
 
 .input-svg {
   position: relative;
-
-  margin-bottom: 8px;
 }
 
 .icon-form {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   position: absolute;
   top: 50%;
   left: 16px;
@@ -559,6 +574,10 @@ img {
   transform: translateY(-50%);
 
   fill: var(--title-color);
+}
+
+.textarea {
+  margin-bottom: 16px;
 }
 
 textarea {
@@ -571,10 +590,6 @@ textarea {
 textarea:focus {
   border-color: var(--brend-color);
   outline: none;
-}
-
-.form-field > textarea {
-  margin-bottom: 16px;
 }
 
 .button-modal {
@@ -612,9 +627,13 @@ textarea:focus {
 
 .chechbox-container {
   display: flex;
+  align-items: center;
 
-  padding-left: 24px;
   margin-bottom: 24px;
+}
+
+.chechbox-container > span {
+  margin-left: 6px;
 }
 
 .chechbox {
@@ -872,6 +891,8 @@ textarea:focus {
   border-radius: 4px;
   margin-right: 24px;
   padding-left: 16px;
+
+  color: var(--border-filter-color);
 
   height: 40px;
   width: 264px;
